--- a/arrow-exp.Rmd
+++ b/arrow-exp.Rmd
@@ -11,51 +11,30 @@ library(arrow)
 library(lobstr)
 library(vroom)
 library(tidyverse)
+
+# Utils ----
+write_chunk_data <- function(data_path, output_dir, chunk_size = 10000000) {
+  if (!fs::dir_exists(output_dir)) fs::dir_create(output_dir)
+  data_name <- fs::path_ext_remove(fs::path_file(data_path))
+  chunk_num <- 0
+  data_chunk <- vroom::vroom(data_path, n_max = chunk_size)
+  data_names <- names(data_chunk)
+  arrow::write_parquet(data_chunk, fs::path(output_dir, glue::glue("{data_name}-{chunk_num}.parquet")))
+  while (nrow(data_chunk) == chunk_size) {
+    chunk_num <- chunk_num + 1
+    data_chunk <- vroom::vroom(data_path, skip = chunk_num * chunk_size, n_max = chunk_size, col_names = data_names)
+    arrow::write_parquet(data_chunk, fs::path(output_dir, glue::glue("{data_name}-{chunk_num}.parquet")))
+  }
+}
 ```
 
 ## Data
-Data was downloaded from [NYC OpenData](https://data.cityofnewyork.us/Transportation/2018-Yellow-Taxi-Trip-Data/t29m-gskq) and contains details about NYC taxi trips in 2018. The following code takes the raw .csv file (~10 GB) and chunks it into smaller parquet files so the entire dataset can be queried from within R.
+Data was downloaded from [NYC OpenData](https://data.cityofnewyork.us/browse?q=taxi) and contains details about NYC taxi trips. The following code takes raw .csv files and chunks them into smaller parquet files so the entire dataset can be queried from within R using `arrow`.
 ```{r create-data}
 if (length(list.files("data/parquet")) == 0) {
-  fs::dir_create("data/parquet")
-  taxi_file <- "data/2018-taxi-data.csv"
-  if (!fs::file_exists(taxi_file)) {
-    stop("The taxi data is not available in the data/ directory. Please download the data from \n https://data.cityofnewyork.us/Transportation/2018-Yellow-Taxi-Trip-Data/ and update the filepath if necessary.", call. = FALSE)
-  }
-  
-  # Establish chunk size - how many rows to include in each split
-  chunk_size <- 10000000
-  
-  # Read in initial data
-  chunk_num <- 0
-  cols_spec <- cols(
-    VendorID = col_double(),
-    tpep_pickup_datetime = col_character(),
-    tpep_dropoff_datetime = col_character(),
-    passenger_count = col_double(),
-    trip_distance = col_double(),
-    RatecodeID = col_double(),
-    store_and_fwd_flag = col_character(),
-    PULocationID = col_double(),
-    DOLocationID = col_double(),
-    payment_type = col_double(),
-    fare_amount = col_double(),
-    extra = col_double(),
-    mta_tax = col_double(),
-    tip_amount = col_double(),
-    tolls_amount = col_double(),
-    improvement_surcharge = col_double(),
-    total_amount = col_double()
-  )
-  
-  taxi_chunk <- vroom(taxi_file, n_max = chunk_size, col_types = cols_spec)
-  taxi_names <- names(taxi_chunk)
-  write_parquet(taxi_chunk, glue::glue("data/parquet/taxi-{chunk_num}.parquet"))
-  while (nrow(taxi_chunk) == chunk_size) {
-    chunk_num <- chunk_num + 1
-    taxi_chunk <- vroom(taxi_file, skip = chunk_num * chunk_size, n_max = chunk_size, col_names = taxi_names, col_types = cols_spec)
-    write_parquet(taxi_chunk, glue::glue("data/parquet/taxi-{chunk_num}.parquet"))
-  }
+  csvs <- fs::dir_ls("data", glob = "*.csv")
+  if (length(csvs) == 0) stop("No csv files found in data/")
+  walk(csvs, write_chunk_data, "data/parquet")
 }  
 fs::dir_ls("data/parquet")
 ```
@@ -134,16 +113,17 @@ class(taxi_f)
 
 ```{r}
 taxi_f %>% 
-  summarize(avg_distance = mean(trip_distance, na.rm =TRUE),
+  summarize(n_obs = n(),
+            avg_distance = mean(trip_distance, na.rm =TRUE),
             avg_charge = mean(total_amount, na.rm = TRUE))
 ```
 
 ```{r}
 taxi_a %>% 
   filter(passenger_count > 5) %>% 
-  summarize(avg_distance = mean(trip_distance, na.rm =TRUE),
-            avg_charge = mean(total_amount, na.rm = TRUE),
-            n_obs = n())
+  summarize(n_obs = n(),
+            avg_distance = mean(trip_distance, na.rm =TRUE),
+            avg_charge = mean(total_amount, na.rm = TRUE))
 ```
 Collect results from a query directly back into R
 ```{r}
